# gasless-solana

./: .gitignore  Anchor.toml  Cargo.toml  README.md  README.public.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.docs/: README.md
.docs/batch-delegate/: batch-airdrop.md  batch-payment.md  overview.md
.docs/single-payment/: architecture.md  authority-management.md  deployment-guide.md  payment-flow.md  phantom-whitelist-request.md  setto-payment-overview.md
deployments/: solana-devnet.json  solana-mainnet.json
scripts/: constants.ts  status.ts
scripts/deploy/: deploy.ts  init-delegate.ts  init.ts  upgrade.ts
scripts/manage/: common.ts
scripts/manage/authority/: add-relayer.ts  add-server-signer.ts  remove-relayer.ts  remove-server-signer.ts  set-emergency-admin.ts  set-fee-recipient.ts  transfer-authority.ts
scripts/manage/emergency-admin/: emergency-add-relayer.ts  emergency-add-server-signer.ts  emergency-remove-relayer.ts  pause.ts  unpause.ts  (+1 more)
scripts/run/: 1-build.sh  1-idl-build.sh  2-build.sh  2-sync-public-repo.sh  3-deploy.sh  3-sync-public-repo.sh  3-upgrade.sh  5-idl.sh  5-init-delegate.sh  5-init.sh  5-verify.sh  6-idl-deploy.sh  6-register-verify.sh  authority.sh  emergency-admin.sh  status.sh
src/: errors.rs  lib.rs
src/instructions/: admin.rs  direct_payment.rs  direct_payment_delegated.rs  initialize.rs  mod.rs  pool_payment.rs  pool_payment_delegated.rs  process_payment.rs  process_payment_delegated.rs  utils.rs
src/state/: config.rs  delegate.rs  mod.rs  relayer.rs  server_signer.rs
tests/: setto-payment.ts
