[package]
name = "setto-payment"
version = "0.1.0"
description = "Setto Payment Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "setto_payment"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
solana-security-txt = "1.1.1"

[dev-dependencies]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
